jvm oom stackoverflow test